# experiments-cookbook

./: .gitignore  1-🧪-experiments.py  README.md  app.py  clear.sh  docker-compose.yml  nvitop.sh  pyproject.toml  run.sh  sound_utlis.py  start_dev.sh  transcription.txt  whisper_spec.py
.streamlit/: config.toml
dataset/: README.md
pages/: 1-🎤-Transcribe-file.py  1-🎤-stream-speech2text.py  2-🎤-Transcribe-streaming.py  3-📑-conversation-chatbot.py  3-📑-rag-chatbot.py  3-🤖-conversation-chatbot.py  4-📑-rag-chatbot.py
pages/backend/: __init__.py  _conversational_bot.py  conversational.py  llm.py
pages/backend/document/: database.py  web_loader.py
pages/backend/infrastructure/: __init__.py  _llm.py  _loader.py  _memory_loader.py  _pdf_loader.py  _vector_store_client.py  _web_loader.py
pages/backend/rag/: __init__.py  _rag_bot.py  default_prompt.py  memory.py  rag.py
pages/chat/: ui.py
pages/langchain/: conversational.py  llm.py  rag.py
pages/langchain/document/: vector_conf.py  vector_retriever.py
pages/langchain/document/loader/: vector_insert.py  web_loader.py
pages/ui/: chat_ui.py
