[tool.poetry]
name = "virtual-staff"
version = "0.1.0"
description = ""
authors = ["mcazerty <dminier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.1"
websockets = "^12.0"
pyaudio = "^0.2.14"
loguru = "^0.7.2"
pydub = "^0.25.1"
aiohttp = "^3.9.3"
webrtcvad = "^2.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
